<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_darkest"
    tools:context=".TutorialFragment">

    <RelativeLayout
    android:layout_centerVertical="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tutorial_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/tutorial"
            android:textColor="@color/color_accent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tutorial_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:text="@string/tutorial_instructions"
            android:textSize="20sp"
            android:layout_below="@id/tutorial_title"/>



        <ImageView
            android:id="@+id/tutorial_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="3dp"
            android:background="@drawable/border_img"
            android:layout_below="@+id/tutorial_description" />

        <LinearLayout
            android:id="@+id/tutorial_prev_next_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutorial_image"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/tutorial_previous_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:visibility="gone"
                android:textColor="@color/color_accent"
                android:text="@string/previous" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/tutorial_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/color_accent"
                android:text="@string/next"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tutorial_skip_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tutorial_prev_next_wrapper"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_accent"
            android:text="@string/skip_tutorial"/>

        <CheckBox
            android:id="@+id/tutorial_skip_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:text="@string/dont_show_message"
            android:buttonTint="@android:color/white"
            android:layout_below="@id/tutorial_skip_btn"/>

</RelativeLayout>
</RelativeLayout>